tests/ui/traits/const-traits/issue-88155.stderr
error[E0015]: cannot call non-const associated function `<T as A>::assoc` in constant functions
  --> $DIR/issue-88155.rs:8:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
